[tool.poetry]
name = "zenoml"
version = "0.4.11"
description = "Interactive Evaluation Framework for Machine Learning"
license = "MIT"
authors = ["Ángel Alexander Cabrera <alex.cabrera@gmail.com>"]
readme = "README.md"
repository = "https://github.com/zeno-ml/zeno"
homepage = "https://zenoml.com"
keywords = ["ml", "testing", "evaluation", "machine learning", "ai"]
packages = [{ include = "zeno" }]
include = ["zeno/frontend/**/*"]
exclude = ["zeno/tests/*"]

[tool.poetry.dependencies]
cachetools = "^5.3.0"
fastapi = ">=0.75,<0.96"
inquirer = "^3.1.2"
nest-asyncio = "^1.5.6"
opentsne = "^0.7.1"
pandas = "^2.0.0"
pathos = "^0.3.0"
python = ">=3.8.1, <=3.11"
requests = "^2.28.1"
setuptools = "*"
tomli = "^2.0.1"
tqdm = "^4.64.0"
uvicorn = ">=0.17.5,<0.22.0"
websockets = ">=10.2,<12.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
httpx = "^0.23.3"
pyright = "^1.1.302"
pytest = "^7.2.2"
ruff = "^0.0.261"

[tool.poetry.scripts]
zeno = "zeno.runner:command_line"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pyright]
include = ["zeno"]
useLibraryCodeForTypes = true

[tool.ruff]
select = ["E", "F", "I", "PD", "N"]
