[tool.poetry]
name = "zenoml-image-classification"
version = "0.0.2"
description = "Image Classification for Zeno"
license = "MIT"
authors = ["Ángel Alexander Cabrera <alex.cabrera@gmail.com>"]
readme = "README.md"  # Markdown files are supported
repository = "https://github.com/cmudig/zeno"
homepage = "https://dig.cmu.edu/zeno/"
keywords = ["ml", "testing"]
packages = [
    { include = "zenoml_image_classification" },
]
include = [
    "zenoml_image_classification/frontend/**/*"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"