[tool.poetry]
name = "zenoml_image_classification"
version = "0.0.1"
description = "Image classification view for Zeno"
license = "MIT"
authors = ["Ángel Alexander Cabrera <alex.cabrera@gmail.com>"]
readme = "README.md"  # Markdown files are supported
repository = "https://github.com/cmudig/zeno"
homepage = "https://dig.cmu.edu/zeno/"
keywords = ["ml", "testing"]
packages = [
    { include = "image_classification" },
]
include = [
    "image_classification/frontend/**/*"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"