[tool.poetry]
name = "zenoml_{{cookiecutter.view_name}}"
version = "0.0.1"
description = "{{cookiecutter.view_name}} for Zeno"
license = "MIT"
authors = ["Ángel Alexander Cabrera <alex.cabrera@gmail.com>"]
readme = "README.md"  # Markdown files are supported
repository = "https://github.com/cmudig/zeno"
homepage = "https://dig.cmu.edu/zeno/"
keywords = ["ml", "testing"]
packages = [
    { include = "{{cookiecutter.view_name}}" },
]
include = [
    "{{cookiecutter.view_name}}/frontend/**/*"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"